[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://sfx/bgm/huayno150.ogg" type="AudioStream" id=2]
[ext_resource path="res://sfx/bgm/aceleracion128.ogg" type="AudioStream" id=3]
[ext_resource path="res://ui/CurrentCamera.tscn" type="PackedScene" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CameraTween" type="Tween" parent="."]

[node name="Sonidos" type="Node" parent="."]

[node name="AvatarPrompt" type="AudioStreamPlayer" parent="Sonidos"]
stream = ExtResource( 2 )

[node name="Acelerate" type="AudioStreamPlayer" parent="Sonidos"]
stream = ExtResource( 3 )

[node name="TransitionTimeOut" type="Timer" parent="."]

[node name="CurrentCamera" parent="." instance=ExtResource( 4 )]
[connection signal="tween_all_completed" from="CameraTween" to="." method="_on_CameraTween_tween_all_completed"]
[connection signal="timeout" from="TransitionTimeOut" to="." method="_on_TransitionTimeOut_timeout"]
